@@ -1,3 +1,7 @@
+2010-09-24  Steven G. Kargl  < kargl@gcc.gnu.org>
+
+	* testsuite/gfortran.dg/operator_c1202.f90: New test.
+
 2010-09-24  Jan Hubicka  <jh@suse.cz>
 
 	* gcc.dg/tree-ssa/leaf.c: New testcase.
